syntax = "proto3";
package proto_stream;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
    rpc SayHelloAgain (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}